internal/config/testdata/valid-config/configWithAlbumNameOption.hjson
{
  APIAppCredentials:
  {
    ClientID: client-id
    ClientSecret: client-secret
  }
  Account: youremail@domain.com
  SecretsBackendType: auto
  Jobs:
  [
    {
      SourceFolder: ./testdata/valid-config
      Album: auto:folderPath
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}
